|
Quick Lists
|
|
Bug ID:
|
6819853
|
|
Votes
|
0
|
|
Synopsis
|
VM does not detect JDK which supports parallel class loaders
|
|
Category
|
hotspot:runtime_system
|
|
Reported Against
|
|
|
Release Fixed
|
hs15(b04),
7(b53) (Bug ID:2175229)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
3-Medium
|
|
Related Bugs
|
4670071
|
|
Submit Date
|
19-MAR-2009
|
|
Description
|
In jdk7 build 50, the VM fails parallel class loading tests.
Posted Date : 2009-03-19 21:55:00.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
In the putback merge for 4670071, there was an added ";" in the string "parallelLockMap;",
used to detect if the JDK supports parallel class loading.
Fix is to remove the extra ";"
Posted Date : 2009-03-19 21:55:00.0
http://hg.openjdk.java.net/jdk7/hotspot-rt/hotspot/rev/e55bcaf3a6a1
Posted Date : 2009-03-20 18:09:43.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |