6819853: VM does not detect JDK which supports parallel class loaders

Reviewed-by: coleenp, pbk, xlu, alanb